# spheredesktop

./: CMakeLists.txt
resources/: shared.qrc
resources/qml/: main.qml
resources/qml/components/: ContextMenu.qml  ContextMenuItem.qml  ContextMenuSeparator.qml  CustomMenu.qml  CustomMenuItem.qml  CustomMenuSeparator.qml  DesktopMenuStyle.qml  Dock.qml
resources/qml/taskbar/: TaskbarMain.qml
src/: main.cpp
src/gui/: desktopmanager.cpp  desktopmanager.hpp  mainscreen.cpp  mainscreen.hpp  taskbar.cpp  taskbar.hpp
